[package]
name = "phpser"
version = "0.1.0"
authors = ["SOFe <sofe2038@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/SOF3/phpser"
homepage = "https://github.com/SOF3/phpser"
readme = "README.md"
description = "PHP serialization format support"

[dependencies]
derive-new = "0.5.8"
derive_more = "0.99.5"
getset = "0.1.0"
serde = {version = "1.0.106", optional = true}


[features]
default = ["serde"]
